# xhs-market-research

./: .env.example  .gitignore  CLAUDE.md  MIGRATION.md  PIPELINE_README.md  PROMPTS_REFERENCE.md  QUICKSTART.md  QUICK_START.md  README.md  REFACTORING_REPORT.md  TEAM_GUIDE.md  analyze.py  analyze_multi.py  config.json  config.yaml  config_loader.py  main.py  main_multi.py  pipeline_config.json  pyproject.toml  query_builder.py  requirements.txt  run_pipeline.py  scrape_multi.py  search.py  semiotic_analysis.py  setup.bat  setup.sh  step1_xhs_scraper.py  step2_semiotic_analysis.py  step3_clustering.py  step4_comparative_analysis.py  step5_insight_extraction.py  step6_theme_enrichment.py  step7_visualization.py  update_password.py  view_analysis.py  xhs  xhs.py  xhs_actor.py  (+1 more)
archive/: PIPELINE_UPDATES.md  consolidate_outputs.py  final_report_builder.py  prompts.md  run_pipeline.py  step4_comparative_analysis.py  step5_insight_extraction.py  step6_theme_enrichment.py  step7_visualization.py  workflow_config.py
docs/: app.js  index.html  styles.css
enriched_themes/: all_themes_20250918_165644.json  all_themes_20250918_165822.json  enriched_themes_report.md  synthesis_20250918_165847.md  theme_cluster_0.md  theme_cluster_1.md  theme_cluster_2.md
example_queries/: coffee_war.txt  condom_research.txt  makeup_brands.txt
insight_outputs_gpt5/: all_insights_20250918_204102.json  insight_extraction_report.md  insights_consumer_psychology.md  insights_cultural_meaning.md  insights_platform_conventions.md  insights_taboo_navigation.md  insights_visual_codes.md  master_codebook_20250918_204122.md
insight_outputs_keybert/: codebook.json  codebook.md
modules/: __init__.py  media_downloader.py
report_outputs/: report.md
report_templates/: linkedin_brief.md.jinja
semiotic_analysis_results/: all_analyses_20250918_163302.json  analysis_001_65b4ef42000000002c012b83_0_咖啡味.json  analysis_002_65e88d73000000000b00ff37_0_泰国特.json  analysis_003_662789e90000000001032135_0_男生必.json  analysis_004_662789e90000000001032135_1_男生必.json  analysis_005_662789e90000000001032135_2_男生必.json  (+58 more)
src/: __init__.py
(+24 files in other folders)
