[project]
name = "xhs-scraper"
version = "3.0.0"
description = "Professional Xiaohongshu (RED) scraper using Apify Actor"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "XHS Scraper Team" }
]
dependencies = [
    "apify-client>=1.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
analysis = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
xhs = "xhs_actor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "xhs_actor.py",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100